# etl-coinbase-api

./: .gitignore  README.md  pyproject.toml
examples/: http_request_basic.py  http_request_params.py
src/: etl_bitcoin_postgre.py  etl_bitcoin_tinydb.py
