[project]
name = "etl-coinbase-api"
version = "0.1.0"
description = ""
authors = [
    {name = "joaohsilva",email = "joaohasilva416@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
